clusters/prod/external-servers/crafty/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crafty
spec:
  ports:
    - name: https
      port: 8443
      targetPort: 8443
      protocol: TCP
