clusters/prod/external-servers/crafty/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: crafty-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`crafty.home.jonahsserver.com`)
      kind: Rule
      services:
        - name: crafty
          port: 8443
          scheme: https
          serversTransport: crafty-insecure-transport
  tls:
    secretName: crafty-certificate-secret
